--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.11.0",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "graphql": "^15.0.0",
     "graphql-tools": "^4.0.7",
