--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.1.5",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.11.0",
     "class-transformer": "^0.2.3",
@@ -32,6 +34,9 @@
     "graphql": "^15.0.0",
     "graphql-tools": "^4.0.7",
     "mongoose": "^5.9.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
@@ -44,6 +49,8 @@
     "@types/jest": "25.1.4",
     "@types/mongoose": "^5.7.9",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
